<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Global -->
    <string name="app_name">Greece Train Schedules</string>
    <string name="app_author"><b>Created by:</b> Christine Gerpheide</string>
    <string name="app_desc_title">About Greece Train Schedules</string>
    <string name="app_desc">Greece Train Schedules is an unofficial application for viewing schedules of Greece\'s national rail system (OSE). The application downloads the latest routes, and then stores them locally on your mobile device to allow for offline access later. Because this application depends on external resources, the application may intermittently fail when those resources are undergoing maintenance. Be patient :)\n\nIf you have questions or suggestions, just send me a message and I\'d be more than happy to collaborate with you. You can raise any issues at https://github.com/phoxicle/TrainOse</string>
    <string name="app_moreinfo">For more info, please visit http://pheide.com/go/code</string>
    <string name="version"><b>Version:</b> </string>
    <string name="build_number">build no. </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="to">to</string>
    
    <!-- Routes Listing (Routes.java) -->
    <string name="optmenu_new_route">New Route</string>
    <string name="optmenu_sync_all">Sync All</string>
    <string name="optmenu_about">About</string>
    <string name="ctxmenu_delete_route">Delete</string>
    <string name="no_routes">No Routes Saved</string>
    
    <!-- New Route (RouteEdit.java) -->
    <string name="new_route">New Route</string>
    <string name="download">Download Route</string>
    <string name="source">From</string>
    <string name="destination">To</string>
    <string name="twoway">Two-way</string>
    <string name="invalid_stations">Please enter valid stations</string>
    
    <!-- Timetables Listing (Timetables.java) -->
    <string name="optmenu_sync">Sync</string>
    <string name="optmenu_sort">Sort By</string>
    <string name="optmenu_delete">Delete</string>
    <string name="optmenu_copy_all">Copy All</string>
    <string name="confirm_delete">Are you sure you want to delete this route?</string>
    <string name="ctxmenu_copy">Copy</string>
    <string name="ctxmenu_details">View Details</string>
    <string name="ctxmenu_seat_availability">Check Seat Availability</string>
    <string name="seats_open_new_window">This will open the OSE website in your phone\'s browser. Do you want to continue?</string>
    <string name="no_timetables">(no timetables)</string>
    <string name="sync_in_progress">Syncing. Please wait...</string>
    <string name="depart">Departs</string>
    <string name="arrive">Arrives</string>
    <string name="duration">Duration</string>
    <string name="train">Train</string>
    <string name="sortBy">Sort By</string>
    <string name="last_synced">Last sync:</string>
    <string name="copy_succesful">Text copied to clipboard</string>
    <string name="copied_route_intro">Retrieved via android</string>
    <string name="schedule">Train schedule:</string>
    <string name="sync_now">Sync now</string>
    
    <!-- Exceptions -->
    <string name="exception_network">Network error</string>
    <string name="exception_server">Server error. Please contact the developer if the problem persists.</string>
    <string name="exception">An error occurred</string>
    
   <string-array name="stations_array">

 
<item>Αγ. Γεώργιος (4ο χλμ Αθήνα-Χαλκίδα)</item> 
<item>Agios Georgios (4th km Ath-Chalkida)</item> 
<item>Αγ. Ανάργυροι (Προαστιακός)</item> 
<item>Agioi Anargyroi (Suburban)</item> 
<item>Αγ. Γεώργιος Φερρών</item> 
<item>Agios Georgios of Ferres</item> 
<item>Αγ. Θεόδωροι</item> 
<item>Agioi Theodoroi</item> 
<item>Αγ. Θωμάς</item> 
<item>Agios Thomas</item> 
<item>Αγ. Στέφανος</item> 
<item>Agios Stefanos</item> 
<item>Αγγείαι</item> 
<item>Aggeie</item> 
<item>Άδενδρο</item> 
<item>Adendro</item> 
<!-- 
<item>Αεροδρόμιο Σπάτων ✈</item> 
<item>Athens International Airport ✈</item> 
 -->
<item>Αθήνα</item> 
<item>Athens</item> 
<item>Αιγίνιο</item> 
<item>Aiginio</item> 
<item>Αίγιο</item> 
<item>Aegion</item> 
<item>Ακράτα-Κράθιο</item> 
<item>Akrata-Krathion</item> 
<item>Αλεξάνδρεια</item> 
<item>Alexandreia</item> 
<item>Αλεξανδρούπολη</item> 
<item>Alexandroupoli</item> 
<item>Αλίαρτος</item> 
<item>Aliartos</item> 
<item>Αλφειός</item> 
<item>Alfeios</item> 
<item>Αμαλιάδα</item> 
<item>Amaliada</item> 
<item>Αμφίκλεια</item> 
<item>Amfikleia</item> 
<item>Αμύνταιο</item> 
<item>Amyntaio</item> 
<item>Άνω Λιόσια</item> 
<item>Ano Liosia</item> 
<item>Αργος</item> 
<item>Argos</item> 
<item>Αρμένιο</item> 
<item>Armenio</item> 
<item>Άρνισσα</item> 
<item>Arnissa</item> 
<item>Ασπρόπυργος</item> 
<item>Aspropyrgos</item> 
<item>Ασπρόχωμα</item> 
<item>Asprochoma</item> 
<item>Αυλίδα</item> 
<item>Avlida</item> 
<item>Αυλώνα</item> 
<item>Avlona</item> 
<item>Αφίδναι</item> 
<item>Afidnai</item> 
<item>Αχαΐα</item> 
<item>Achaia</item> 
<item>Αχαρνές</item> 
<item>Acharnes</item> 
<item>Αχλαδόκαμπος</item> 
<item>Achladokambos</item> 
<item>Βαλύρα</item> 
<item>Valyra</item> 
<item>Βελεστίνο</item> 
<item>Velestino</item> 
<item>Βέροια</item> 
<item>Veroia</item> 
<item>Βόλος</item> 
<item>Volos</item> 
<item>Βυρώνεια</item> 
<item>Vyronia</item> 
<item>Γάζωρος</item> 
<item>Gazoros</item> 
<item>Γαλλικός</item> 
<item>Gallikos</item> 
<item>Δαυλεία</item> 
<item>Davleia</item> 
<item>Δεκέλεια</item> 
<item>Dekelia</item> 
<item>Δήλεσι (2ο χλμ Αθήνα-Χαλκίδα)</item> 
<item>Dilesi (2nd km in Ath-Chalkida)</item> 
<item>Διακοφτό</item> 
<item>Diakofto</item> 
<item>Δίκαια</item> 
<item>Dikaia</item> 
<item>Διδυμότειχο</item> 
<item>Didymoteichon</item> 
<item>Δομοκός</item> 
<item>Domokos</item> 
<item>Δοξαράς</item> 
<item>Doxaras</item> 
<item>Δράμα</item> 
<item>Drama</item> 
<item>Δουκίσσης Πλακεντίας</item> 
<item>Doukissis Plakentias</item> 
<item>Εδεσσα</item> 
<item>Edessa</item> 
<item>Ειδομένη</item> 
<item>Idomeni</item> 
<item>Ελαιοχώρι</item> 
<item>Elaiochori</item> 
<item>Επισκοπή Νάουσας</item> 
<item>Episkopi of Naoussa</item> 
<item>Ευαγγελισμός Τεμπών</item> 
<item>Evangelismos (Tembi)</item> 
<item>Ζαχάρω</item> 
<item>Zacharo</item> 
<item>Ζευγολάτειο</item> 
<item>Zevgolateio</item> 
<item>Ηράκλειο</item> 
<item>Iraklio</item> 
<item>Θαυμακός</item> 
<item>Thavmakos</item> 
<item>Θέρμες</item> 
<item>Thermes</item> 
<item>Θεσσαλονίκη</item> 
<item>Thessaloniki</item> 
<item>Θήβα</item> 
<item>Thiva</item> 
<item>Καλάβρυτα</item> 
<item>Kalavryta</item> 
<item>Καλαμάτα</item> 
<item>Kalamata</item> 
<item>Καλαμπάκα</item> 
<item>Kalambaka</item> 
<item>Καλό Νερό</item> 
<item>Kalo Nero</item> 
<item>Καλοχώρι-Παντείχι</item> 
<item>Kalochori-Pantichi</item> 
<item>Καρδίτσα</item> 
<item>Karditsa</item> 
<item>Καστανάς</item> 
<item>Kastanas</item> 
<item>Κατάκωλο</item> 
<item>Katakolo</item> 
<item>Κατερίνη</item> 
<item>Katerini</item> 
<item>Κηφισίας</item> 
<item>Kifissias</item> 
<item>Κιάτο</item> 
<item>Kiato</item> 
<item>Κιλκίς</item> 
<item>Kilkis</item> 
<item>Κινέττα</item> 
<item>Kinetta</item> 
<item>Κοζάνη</item> 
<item>Kozani</item> 
<item>Κομοτηνή</item> 
<item>Komotini</item> 
<item>Κόμανος</item> 
<item>Komanos</item> 
<item>Κόρινθος</item> 
<item>Korinthos</item> 
<item>Κορινός</item> 
<item>Korinos</item> 
<item>Κορωπί</item> 
<item>Koropi</item> 
<item>Κρέστενα</item> 
<item>Krestena</item> 
<item>Κυπαρίσσια</item> 
<item>Kyparissia</item> 
<item>Κυφαιρά</item> 
<item>Kyfaira</item> 
<item>Κυψέλη Λάρισσας</item> 
<item>Kypseli (@Larissa)</item> 
<item>Λαμία</item> 
<item>Lamia</item> 
<item>Λάρισα</item> 
<item>Larissa</item> 
<item>Λατομείο (@Μελισσιάτικα)</item> 
<item>Latomeio (@Melissiatika)</item> 
<item>Λειανοκλάδι</item> 
<item>Lianokladi</item> 
<item>Λειβαδειά</item> 
<item>Levadia</item> 
<item>Λεβαδειά Κερκίνης</item> 
<item>Livadia Kerkinis</item> 
<item>Λεπτοκαρυά</item> 
<item>Leptokarya</item> 
<item>Λεύκα</item> 
<item>Lefka</item> 
<item>Λευκοθέα Αλιστράτης</item> 
<item>Lefkothea Alistratis</item> 
<item>Λιλαία</item> 
<item>Lilaia</item> 
<item>Λιτόχωρο</item> 
<item>Litochoro</item> 
<item>Μαγούλα (Ελευσίνα)</item> 
<item>Magoula (Elefsina)</item> 
<item>Μέγαρα</item> 
<item>Megara</item> 
<item>Μεγάλο Σπήλαιο</item> 
<item>Megalo Spilaio</item> 
<item>Μεθώνη</item> 
<item>Methoni</item> 
<item>Μελιά Πλατυκάμπου</item> 
<item>Melia of Platykambos</item> 
<item>Μελισσιάτικα</item> 
<item>Melissiatika</item> 
<item>Μεσσήνη</item> 
<item>Messini</item> 
<item>Μεταμόρφωση</item> 
<item>Metamorfosi</item> 
<item>Μουριές</item> 
<item>Mouries</item> 
<item>Μπράλος</item> 
<item>Bralos</item> 
<item>Μύλοι Ναυπλίου</item> 
<item>Myloi of Nafplio</item> 
<item>Μυκήνες</item> 
<item>Mykinai</item> 
<item>Νάουσα</item> 
<item>Naoussa</item> 
<item>Ναύπλιο</item> 
<item>Nafplio</item> 
<item>Ναυπηγεια Χαλκίδας (χλμ 13)</item> 
<item>Chalkida shipyards (13th km)</item> 
<item>Νέα Πέραμος</item> 
<item>Nea Peramos</item> 
<item>Νεμέα</item> 
<item>Nemea</item> 
<item>Νέο Πετρίτσι</item> 
<item>Neo Petritsi</item> 
<item>Νέοι Πόροι</item> 
<item>Neoi Poroi</item> 
<item>Νεραντζιώτισσα</item> 
<item>Nerantziotissa</item> 
<item>Ξάνθη</item> 
<item>Xanthi</item> 
<item>Ξεχασμένη Ημαθίας</item> 
<item>Xechasmeni of Imathia</item> 
<item>Ξυλόκαστρο</item> 
<item>Xylokastro</item> 
<item>Ξυνιάδα</item> 
<item>Xyniada</item> 
<item>Οινόη</item> 
<item>Inoi</item> 
<item>Οινόφυτα</item> 
<item>Oinofyta</item> 
<item>Ολυμπία</item> 
<item>Olympia</item> 
<item>Ορεστιάδα</item> 
<item>Orestiada</item> 
<item>Ορφανά</item> 
<item>Orfana</item> 
<item>Παιανία - Κάντζα</item> 
<item>Paiania - Kantza</item> 
<item>Παλαιοφάρσαλος</item> 
<item>Palaeofarsalos</item> 
<item>Παλλήνη</item> 
<item>Pallini</item> 
<item>Παρθένι</item> 
<item>Partheni</item> 
<item>Πάτρα</item> 
<item>Patra</item> 
<item>Πειραιάς</item> 
<item>Piraeus</item> 
<item>Πεντέλη</item> 
<item>Penteli</item> 
<item>Πλατύ</item> 
<item>Platy</item> 
<item>Πολύκαστρο</item> 
<item>Polykastro</item> 
<item>Προμαχώνας</item> 
<item>Promachonas</item> 
<item>Πτολεμαΐδα</item> 
<item>Ptolemaida</item> 
<item>Πύθιο Διδυμοτείχου</item> 
<item>Pythion of Didymoteicho</item> 
<item>Πύργος Ηλείας</item> 
<item>Pyrgos Ilias</item> 
<item>Ραψάνη</item> 
<item>Rapsani</item> 
<item>Ρέντη</item> 
<item>Renti (Agiou Ioanni Renti)</item> 
<item>Ριζόμυλο Φερρών</item> 
<item>Rizomylos (Ferres)</item> 
<item>Ρίο</item> 
<item>Rio</item> 
<item>Ροδόπολις</item> 
<item>Rodopolis</item> 
<item>Ρουφ</item> 
<item>Rouf</item> 
<item>Σέρρες</item> 
<item>Serres</item> 
<item>Σιδηρόκαστρο</item> 
<item>Sidirokastro</item> 
<item>Σίνδος</item> 
<item>Sindos</item> 
<item>Σκύδρα</item> 
<item>Skydra</item> 
<item>Σουφλι</item> 
<item>Soufli</item> 
<item>Σταυρούπολη Ξάνθης</item> 
<item>Stavroupoli of Xanthi</item> 
<item>Στενό</item> 
<item>Steno</item> 
<item>Στεφανοβίκειο</item> 
<item>Stefanovikeio</item> 
<item>Στρυμώνας</item> 
<item>Strymonas</item> 
<item>Στυλίδα</item> 
<item>Stylida</item> 
<item>Στυρφακά</item> 
<item>Stirfaka</item> 
<item>Σφενδάλη</item> 
<item>Sfendali</item> 
<item>Τανάγρα</item> 
<item>Tanagra</item> 
<item>Τιθορέα</item> 
<item>Tithorea</item> 
<item>Τρίκαλα</item> 
<item>Trikala</item> 
<item>Τριπολη</item> 
<item>Tripoli</item> 
<item>Τυχερό</item> 
<item>Tychero</item> 
<item>Φέρρες</item> 
<item>Ferres</item> 
<item>Φλώρινα</item> 
<item>Florina</item> 
<item>Φωτολίβος</item> 
<item>Fotolivos</item> 
<item>Χάλκη</item> 
<item>Chalki</item> 
<item>Χαλκίδα</item> 
<item>Chalkida</item> 
<item>Χιλιομίδι</item> 
<item>Chiliomidi</item> 
<item>Χλμ 18 Λάρισας-Βόλου</item> 
<item>18th km Larissa-Volos</item> 
<item>Χλμ 19 Λάρισας-Βόλου</item> 
<item>19th km Larissa-Volos</item> 
<item>Χέρσος</item> 
<item>Hersos</item> 
    </string-array>
    
</resources>
