<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*">
    
    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    
	    <TextView 
		    android:text="@string/depart"
		    android:textStyle="bold"
		    />
	    <TextView
		    android:text="@string/arrive"
		    android:textStyle="bold"
		    />
		<TextView
		    android:text="@string/duration"
		    android:textStyle="bold"
		    />
		<TextView
		    android:text="@string/train"
			android:textStyle="bold"  
			/>
	        	
	</TableRow>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <ListView android:id="@+id/android:list"
	          android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
	  	<TextView android:id="@+id/android:empty"
	          android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/no_timetables"/>
     
     </LinearLayout>
     
     <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    
	    <TextView 
		    android:text="@string/last_synced"
		    android:textStyle="bold"
		    />
	    <TextView
		    android:id="@+id/last_synced"
		    />
	        	
	</TableRow>
	
</TableLayout>
