<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/source"
			/>
	    <AutoCompleteTextView android:id="@+id/source"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        />
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/destination"
	 	   />
	    <AutoCompleteTextView android:id="@+id/destination"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        />
		<CheckBox android:id="@+id/twoway"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/twoway"
		    />

	
	
		<Button android:id="@+id/confirm" 
			android:text="@string/download"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

</LinearLayout>